add hover cursor css

--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -204,6 +204,10 @@
     padding: 2px 10px;
   }
   
+  .story-follow-top:hover {
+    cursor: pointer;
+  }
+  
   .story-user-desc-top {
     font-size: 16px;
   }
