--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -10,7 +10,7 @@
 }
 
 .modal-header {
-  background: $yellow;
+  background: #000000;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
