--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -3,7 +3,7 @@
 }
 
 .padding-side {
-  padding: 0px 10px;
+  padding: 0px 20px;
 }
 
 .tag {
@@ -23,6 +23,6 @@
 
 @media (min-width: 768px) {
   .padding-side {
-    padding: 0 20px;
+    padding: 0px;
   }
 }
