add responsive css for like and response count

--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -264,7 +264,8 @@
     width: 24px;
   }
   
-  .story-like-count-bottom {
+  .story-like-count-bottom, 
+  .story-response-count-bottom {
     font-size: 16px;
     margin: 2px 18px 0px 7px;
   }
