--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -21,6 +21,10 @@
   cursor: pointer;
 }
 
+.loader { // loading spinner or something
+  
+}
+
 @media (min-width: 768px) {
   .padding-side {
     padding: 0px;
