--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -151,19 +151,27 @@
 }
 
 .story-footer {
-  margin: 0 auto;
+  margin: 0px auto 20px auto;
   padding-top: 15px;
   padding-bottom: 10px;
   position: relative;
   max-width: 700px;
 }
 
-.story-follow-bottom {
+.story-follow {
   border: 1px solid $yellow;
   border-radius: 10px;
   color: $yellow;
   font-size: 14px;
   padding: 2px 10px;
+}
+
+.story-follow-bottom {
+  // border: 1px solid $yellow;
+  // border-radius: 10px;
+  // color: $yellow;
+  // font-size: 14px;
+  // padding: 2px 10px;
   position: absolute;
   right: 10px;
   top: 10px;
@@ -196,7 +204,7 @@
 }
 
 .story-user-desc-bottom {
-  font-size: 14px;
+  font-size: 12px;
   color: $lighter-gray;
   margin-top: 5px;
 }
@@ -208,25 +216,26 @@
   
   .story-username-top {
     font-size: 18px;
-    margin: 1px 20px 5px 0px;
+    margin: 5px 20px 5px 0px;
+  }
+  
+  .story-follow {
+    border-radius: 15px;
+    font-size: 16px;
+    padding: 4px 15px;
   }
   
   .story-follow-top {
-    border: 1px solid $yellow;
-    border-radius: 10px;
-    color: $yellow;
     display: block;
     float: left;
-    font-size: 14px;
     margin-top: 1.5px;
-    padding: 2px 10px;
   }
   
   .story-follow-top:hover {
     cursor: pointer;
   }
   
-  .story-user-desc-top {
+  .story-user-desc {
     font-size: 16px;
   }
   
