give css for tablet/desktop break point for comment form

--- a/app/assets/stylesheets/comment_form.scss
+++ b/app/assets/stylesheets/comment_form.scss
@@ -90,4 +90,20 @@
   .comment-form-user-img {
     width: 36px;
   }
+  
+  .comment-form-inst {
+    left: 40px;
+  }
+  
+  .comment-form-username {
+    font-size: 18px;
+    left: 40px;
+  }
+  
+  .comment-go-full,
+  .comment-submit {
+    border-radius: 15px;
+    font-size: 16px;
+    padding: 4px 15px;
+  }
 }
