change filenames; add new links to comments index item; tweak css

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -19,6 +19,10 @@
   color: $yellow;
 }
 
+.comments-show-all-text:hover {
+  cursor: pointer;
+}
+
 // index item //
 .comment-header {
   margin-bottom: 10px;
