add hover css; check for currentUser when user clicks heart, bookmark and follow button

--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -122,6 +122,10 @@
   width: 20px;
 }
 
+.story-like-heart-img-bottom:hover {
+  cursor: pointer;
+}
+
 .story-like-count-bottom {
   float: left;
   font-size: 14px;
