--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -2,7 +2,7 @@
   background-color: #FFFFFF;
   border-bottom: 1px solid rgba(0, 0, 0, 0.10);
   box-sizing: border-box;
-  height: 50px;
+  height: $header-height;
   left: 50%;
   padding: 10px;
   position: fixed;
