--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,7 +7,7 @@
   left: 50%;
   padding: 10px;
   position: fixed;
-  top: $header-height;
+  top: $navonly-height;
   transform: translate(-50%, 0);
   width: 100%;
   z-index: 10;
