--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -2,7 +2,8 @@
 .story {
   background: #FFFFFF;
   margin: 0px auto;
-  padding-top: 50px;
+  padding-top: $story-padding-top;
+  position: relative;
   width: 100%
 }
 
@@ -68,6 +69,10 @@
 .story-read-time {
   float: left;
   font-size: 12px;
+}
+
+.side-story-buttons {
+  display: hidden;
 }
 
 .story-title {
@@ -282,5 +287,12 @@
   .story-response-count-bottom {
     font-size: 16px;
     margin: 2px 18px 0px 7px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .side-story-buttons {
+    display: block;
+    position: fixed;
   }
 }
