--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -4,9 +4,13 @@
 
 .user-show-header {
   background: #FFFFFF;
+}
+
+.user-show-header-inner {
   border-bottom: 1px solid $light-gray;
-  margin: 0px auto;
   padding: 50px 10px 10px 10px;
+  margin: 0px auto;
+  max-width: 600px;
   width: calc(100% - 20px);
 }
 
@@ -67,17 +71,24 @@
   width: 50px;
 }
 
-.user-show-navbar-ul {
-  background: #FFFFFF;
-  border-bottom: 1px solid $light-gray;
+.user-show-nav-bar {
   box-shadow: 0 2px 2px -2px rgba(0,0,0,0.15);
+}
+
+.user-show-navbar-ul {
   display: flex;
   justify-content: space-around;
   padding: 10px 0px;
+  margin: 0 auto;
+  max-width: 600px;
+}
+
+.user-show-inner-navbar {
+  background: #FFFFFF;
 }
 
 .user-show-navbar-link {
-  color: $gray;
+  color: $light-gray;
   font-size: 14px;
 }
 
@@ -90,8 +101,60 @@
 
 .user-show-tab-header {
   background: $main-background-gray;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 900;
   height: 40px;
+  margin: 0 auto;
+  max-width: 620px;
   padding: 40px 0px 0px 20px;
+}
+
+.user-show-tab-header-recs {
+  padding: 20px 0px 20px 20px;
+}
+
+.user-profile-latest,
+.user-profile-recs {
+  margin: 0 auto;
+  max-width: 600px;
+}
+
+.user-profile-recs-see-more {
+  color: $light-gray;
+  padding-top: 5px;
+}
+
+.user-profile-recs-see-more:hover {
+  cursor: pointer;
+}
+
+.user-profile-rec-item {
+  background: #FFFFFF;
+  padding: 30px 15px;
+}
+
+.user-profile-rec-item:nth-child(even) {
+  border-bottom: 1px solid $light-gray;
+  border-top: 1px solid $light-gray;
+}
+
+.rec-title {
+  font-size: 18px;
+  font-weight: 900;
+  margin-bottom: 10px;
+  width: calc(100% - 80px) // 80px = .rec-img width + margin-left
+}
+
+.rec-title-no-img {
+  width: 100%;
+}
+
+.rec-img {
+  margin-left: 15px;
+  width: 65px;
+}
+
+.rec-author {
+  color: $yellow;
+  font-size: 16px;
 }
