complete recommended tab

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -109,6 +109,10 @@
   padding: 40px 0px 0px 20px;
 }
 
+.tab-header-active {
+  color: #000000;
+}
+
 .user-show-tab-header-recs {
   padding: 20px 0px 20px 20px;
 }
