--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -166,7 +166,7 @@
 .user-responses-ul {
   background: #FFFFFF;
   margin: 0 auto;
-  max-width: 640px;
+  max-width: 600px;
   padding: 30px 0px;
 }
 
@@ -174,15 +174,31 @@
   margin-bottom: 20px;
 }
 
+.user-resp-content {
+  font-size: 16px;
+  line-height: 20px;
+  padding: 0px 20px;
+  max-width: 600px;
+}
+
 .users-resp-read-more {
   color: $light-gray;
   font-size: 14px;
   margin-bottom: 15px;
+  padding: 10px 20px 0px 20px
 }
 
 
 @media (min-width: 768px) {
   .user-show-header-img {
     width: 100px;
+  }
+  
+  .user-responses-ul {
+    padding: 20px;
+  }
+  
+  .user-resp-item-footer {
+    padding: 0px 20px;
   }
 }
