--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -29,6 +29,8 @@
   border: 1px solid $yellow;
   border-radius: 20px;
   color: $yellow;
+  padding: 3px 5px;
+  width: 50px;
 }
 
 @media (min-width: 768px) {
