Add more to seeds; successfully toggle follow and unfollow on user show follow modal

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -232,9 +232,11 @@
 .users-follows-modal-btn {
   background: $yellow;
   color: #FFFFFF;
+  font-size: 12px;
   position: absolute;
   right: 0;
-  top: -5px;
+  text-align: center;
+  top: -3px;
 }
 
 .user-follows-img {
