--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -169,10 +169,8 @@
 }
 
 .story-follow {
-  border: 1px solid $yellow;
-  border-radius: 10px;
-  color: $yellow;
-  font-size: 14px;
+  float: left;
+  margin-top: -5px;
   padding: 2px 10px;
 }
 
