--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -2,6 +2,11 @@
   display: none !important;
 }
 
+.card {
+  border-radius: 3px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
 .padding-side {
   padding: 0px 20px;
 }
