--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -39,7 +39,7 @@
   color: $dark-yellow;
 }
 
-.story-follow-top {
+.story-follow-top-btn {
   display: none;
 }
 
@@ -169,17 +169,11 @@
 }
 
 .story-follow {
-  float: left;
   margin-top: -5px;
   padding: 2px 10px;
 }
 
-.story-follow-bottom {
-  // border: 1px solid $yellow;
-  // border-radius: 10px;
-  // color: $yellow;
-  // font-size: 14px;
-  // padding: 2px 10px;
+.story-follow-bottom-btn {
   position: absolute;
   right: 10px;
   top: 10px;
@@ -232,7 +226,7 @@
     padding: 4px 15px;
   }
   
-  .story-follow-top {
+  .story-follow-top-btn {
     display: block;
     float: left;
     margin-top: 1.5px;
