stringify comment content in comments/get_comments_only; format the stringified content into paragraphs in comment show

--- a/app/assets/stylesheets/content_form.scss
+++ b/app/assets/stylesheets/content_form.scss
@@ -1,6 +1,8 @@
 // story content form //
 
 // comment content form //
-.content-form-paragraph {
-  height: 20px;
+.content-form-error {
+  float: left;
+  font-size: 14px;
+  margin-top: 3px;
 }
