--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -72,7 +72,7 @@
 }
 
 .side-story-buttons {
-  display: hidden;
+  display: none;
 }
 
 .story-title {
@@ -176,7 +176,7 @@
 .story-follow-bottom-btn {
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 15px;
 }
 
 .story-user-img-container-bottom {
