remove binding.pry/debugger and tweak css

--- a/app/assets/stylesheets/content_form.scss
+++ b/app/assets/stylesheets/content_form.scss
@@ -1,6 +1,10 @@
 // story content form //
 
 // comment content form //
+.content-form {
+  margin-bottom: 10px;
+}
+
 .content-form-error {
   float: left;
   font-size: 14px;
