show edit button if you are viewing your own profile; show follow button if you are viewing another user's profile

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -72,11 +72,20 @@
   }
 }
 
+.user-show-buttons {
+  
+}
+
 .user-show-edit-btn {
   margin: 0px auto 30px auto;
   padding: 5px 3px;
   text-align: center;
   width: 50px;
+}
+
+.user-show-follow-btn {
+  margin: 0px auto 30px auto;
+  width: 60px;
 }
 
 .user-show-nav-bar {
