--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -14,6 +14,19 @@
   width: calc(100% - 20px);
 }
 
+.user-show-header-img-container {
+  position: relative;
+}
+
+.stuffz {
+  position: absolute;
+  top: 0
+}
+
+.camera {
+  width: 20px;
+}
+
 .user-show-header-img {
   border-radius: 50%;
   margin: 50px auto 0px auto;
