successfully create story; redirect user to story show page after; same refactor/review business as user edit

--- a/app/assets/stylesheets/content_form.scss
+++ b/app/assets/stylesheets/content_form.scss
@@ -1,8 +1,9 @@
-// story content form //
-
-// comment content form //
 .content-form {
   margin-bottom: 10px;
+}
+
+.content-form:empty:before {
+  content: attr(placeholder);
 }
 
 .content-form-error {
