--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -100,6 +100,10 @@
   max-width: 700px;
 }
 
+.story-content-p {
+  margin-top: 15px;
+}
+
 .story-tags {
   margin: 20px auto 0px auto;
   max-width: 700px;
