--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -75,11 +75,14 @@
   position: absolute;
   visibility: hidden;
   width: 32px;
+  top: -9999px;
+  left: -9999px;
 }
 
 .story-title {
   font-weight: bold;
   font-size: 28px;
+  letter-spacing: 0.05em;
   margin: 0 auto;
   max-width: 700px;
 }
@@ -87,6 +90,7 @@
 .story-subtitle {
   color: $lighter-gray;
   font-size: 24px;
+  letter-spacing: 0.05em;
   margin: 5px auto 20px auto;
   max-width: 700px;
 }
@@ -103,7 +107,9 @@
 }
 
 .story-content-p {
-  margin-top: 15px;
+  margin-top: 30px;
+  letter-spacing: 0.05em;
+  line-height: 2em;
 }
 
 .story-tags {
