--- a/app/assets/stylesheets/story_form.scss
+++ b/app/assets/stylesheets/story_form.scss
@@ -35,8 +35,7 @@
   display: block;
   margin: 0 auto !important;
   max-width: 700px;
-  // width: calc(100% - 40px);
-  width: 100%;
+  width: calc(100% - 40px);
 }
 
 .stories-form-input-title {
