use lighter black instead of full black

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -81,6 +81,7 @@
 }
 
 .stories-item-title {
+  color: $light-black;
   font-size: 18px;
   letter-spacing: 0.01em;
   margin: 15px 0 5px 0;
@@ -95,6 +96,7 @@
 }
 
 .stories-item-snippet {
+  color: $light-black;
   letter-spacing: 0.01em;
   margin-bottom: 10px;
 }
