--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -9,6 +9,7 @@ $overlay-gray: rgba(51,51,51,0.7);
 $darker-white: rgba(255, 255, 255, 0.972549);
 $yellow: #F3D351;
 $dark-yellow: #E8C63B;
+$light-black: rgba(0, 0, 0, 0.8);
 
 // header & navbar //
 $header-height: 50px;
