--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -80,6 +80,7 @@
 }
 
 .story-title {
+  color: $light-black;
   font-weight: bold;
   font-size: 28px;
   letter-spacing: 0.05em;
@@ -100,6 +101,7 @@
 }
 
 .story-content {
+  color: $light-black;
   font-size: 18px;
   line-height: 1.5em;
   margin: 0px auto 15px auto;
