--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -82,8 +82,22 @@
 }
 
 .dropdown-menu-user {
+  background: #FFFFFF;
+  left: -33px;
   position: absolute;
+  width: 100px;
   z-index: 12;
+}
+
+.dropdown-menu-user-option {
+  display: block;
+  font-size: 14px;
+  padding: 7px 0px;
+  text-align: center;
+  
+  &:hover {
+    color: $yellow;
+  }
 }
 
 .header-list-search {
