--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -222,9 +222,14 @@
   width: 100%;
 }
 
+.rec-left-container {
+  float: left;
+}
+
 .rec-img {
+  float: right;
   margin-left: 15px;
-  width: 65px;
+  width: 100px;
 }
 
 .rec-author {
