start on story edit; add/fix minor things in other places

--- a/app/assets/stylesheets/users_stories.scss
+++ b/app/assets/stylesheets/users_stories.scss
@@ -36,6 +36,10 @@
   margin-top: -3px;
   position: relative;
   width: 24px;
+  
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .dropdown-menu-user-stories {
