--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -23,11 +23,10 @@
 .nav-bar-hamburger-menu {
   position: absolute;
   width: 30px;
-}
-
-.nav-bar-hamburger-menu:hover {
-  cursor: pointer;
-  padding-top: 2px;
+  
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .nav-bar-links-container {
@@ -38,10 +37,10 @@
 
 .nav-bar-link {
   color: $dark-gray;
-}
-
-.nav-bar-link:hover {
-  color: #000000;
+  
+  &:hover {
+    color: #000000;
+  }
 }
 
 // tablet break point //
