continue users comments

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -218,7 +218,7 @@
   font-size: 18px;
   font-weight: 900;
   margin-bottom: 10px;
-  width: calc(100% - 80px) // 80px = .rec-img width + margin-left
+  // width: calc(100% - 80px) // 80px = .rec-img width + margin-left
 }
 
 .rec-title-no-img {
