complete users responses with styling but without proper edit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,5 +28,5 @@
 @import "comments";
 @import "user_show";
 @import "story_form";
-@import "users_stories";
+@import "users_stories_comments";
 @import "sliding_menu";
