add and delete tag follows

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import "comments";
 @import "user_show";
 @import "story_form";
-@import "users_stories_comments";
+@import "user_stories_comments";
 @import "sliding_menu";
 @import "comments_edit";
+@import "user_tag_follow";
